@@ -41,12 +41,15 @@
 #include "WriteBarrier.h"
 #include <wtf/dtoa.h>
 #include <wtf/Threading.h>
-#include <wtf/ThreadingOnce.h>
 #include <wtf/dtoa/cached-powers.h>
 
 using namespace WTF;
 
 namespace JSC {
+
+#if OS(DARWIN)
+static pthread_once_t initializeThreadingKeyOnce = PTHREAD_ONCE_INIT;
+#endif
 
 static void initializeThreadingOnce()
 {
@@ -73,8 +76,15 @@ static void initializeThreadingOnce()
 
 void initializeThreading()
 {
-    static WTF::ThreadingOnce initializeThreadingKeyOnce;
-    initializeThreadingKeyOnce.callOnce(initializeThreadingOnce);
+#if OS(DARWIN)
+    pthread_once(&initializeThreadingKeyOnce, initializeThreadingOnce);
+#else
+    static bool initializedThreading = false;
+    if (!initializedThreading) {
+        initializeThreadingOnce();
+        initializedThreading = true;
+    }
+#endif
 }
 
 } // namespace JSC
