@@ -1,3 +1,15 @@
+2013-12-04  Commit Queue  <commit-queue@webkit.org>
+
+        Unreviewed, rolling out r160116.
+        http://trac.webkit.org/changeset/160116
+        https://bugs.webkit.org/show_bug.cgi?id=125264
+
+        Change doesn't work as intended. See bug comments for details.
+        (Requested by bfulgham on #webkit).
+
+        * runtime/InitializeThreading.cpp:
+        (JSC::initializeThreading):
+
 2013-12-04  Oliver Hunt  <oliver@apple.com>
 
         Refactor static getter function prototype to include thisValue in addition to the base object
